# test_hardik

./: README.md  pyproject.toml  usage-instructions.md
.github/workflows/: ci.yml
test_hardik/: hooks.py  modules.txt  test_data_generation.py
test_hardik/test_hardik/doctype/customer/: customer.js  customer.json  customer.py  test_customer.py
test_hardik/test_hardik/doctype/solar_cell_kw_reading_entry/: solar_cell_kw_reading_entry.js  solar_cell_kw_reading_entry.json  solar_cell_kw_reading_entry.py  test_solar_cell_kw_reading_entry.py
test_hardik/test_hardik/doctype/solar_cell_kwh_reading_entry/: solar_cell_kwh_reading_entry.js  solar_cell_kwh_reading_entry.json  solar_cell_kwh_reading_entry.py  test_solar_cell_kwh_reading_entry.py
test_hardik/test_hardik/doctype/solar_cell_tariff_configuration/: solar_cell_tariff_configuration.js  solar_cell_tariff_configuration.json  solar_cell_tariff_configuration.py  test_solar_cell_tariff_configuration.py
test_hardik/test_hardik/report/solar_cell_monthly_kw_tariff_report/: solar_cell_monthly_kw_tariff_report.js  solar_cell_monthly_kw_tariff_report.json  solar_cell_monthly_kw_tariff_report.py
test_hardik/test_hardik/report/solar_cell_monthly_kwh_tariff_report/: solar_cell_monthly_kwh_tariff_report.js  solar_cell_monthly_kwh_tariff_report.json  solar_cell_monthly_kwh_tariff_report.py
